info text jump fix :bug:

--- a/project/src/css/main.css
+++ b/project/src/css/main.css
@@ -736,6 +736,9 @@ body {
   min-width: 1.8rem;
   font-weight: 700;
 }
+.recipe__info-text {
+  min-width: 5.6rem;
+}
 .recipe__info-buttons {
   display: -webkit-box;
   display: -ms-flexbox;
